--- a/public/stylesheets/dashboard/main.css
+++ b/public/stylesheets/dashboard/main.css
@@ -160,6 +160,57 @@ table {
   .added-input__button:hover {
     background: rgba(223, 53, 53, 0.473); }
 
+.thumbnail-preview {
+  box-sizing: border-box;
+  padding: 10px;
+  background: #b5e2fc;
+  overflow: hidden; }
+
+.thumbnail-preview__item {
+  float: left;
+  width: 200px;
+  height: 200px;
+  background: #8080ff;
+  margin: 0px 10px 10px 0px; }
+
+.thumbnail-preview__image {
+  width: 100%;
+  height: 100%; }
+
+.header-image-preview {
+  box-sizing: border-box;
+  padding: 10px;
+  background: #b5e2fc;
+  overflow: hidden; }
+
+.header-image-preview__item {
+  float: left;
+  width: 200px;
+  height: 200px;
+  background: #8080ff;
+  margin: 0px 10px 10px 0px; }
+
+.header-image-preview__image {
+  width: 100%;
+  height: 100%; }
+
+.snapshot-preview {
+  box-sizing: border-box;
+  padding: 10px;
+  background: #b5e2fc;
+  overflow: hidden; }
+
+.snapshot-preview__item {
+  float: left;
+  width: 200px;
+  height: 200px;
+  background: #8080ff;
+  margin: 0px 10px 10px 0px; }
+
+.snapshot-preview__image {
+  width: 100%;
+  height: 100%; }
+
 .gutter {
   float: left;
   width: 1vw;
