--- a/sass/dashboard/partials/_content-section.scss
+++ b/sass/dashboard/partials/_content-section.scss
@@ -117,3 +117,57 @@
     background: rgba(223, 53, 53, 0.473);
   }
 }
+
+.thumbnail-preview {
+  box-sizing: border-box;
+  padding: 10px;
+  background: rgb(181, 226, 252);
+  overflow: hidden;
+}
+
+.thumbnail-preview__item {
+  float: left;
+  width: 200px; height: 200px;
+  background: rgb(128, 128, 255);
+  margin: 0px 10px 10px 0px;
+}
+
+.thumbnail-preview__image {
+  width: 100%; height: 100%;
+}
+
+.header-image-preview {
+  box-sizing: border-box;
+  padding: 10px;
+  background: rgb(181, 226, 252);
+  overflow: hidden;
+}
+
+.header-image-preview__item {
+  float: left;
+  width: 200px; height: 200px;
+  background: rgb(128, 128, 255);
+  margin: 0px 10px 10px 0px;
+}
+
+.header-image-preview__image {
+  width: 100%; height: 100%;
+}
+
+.snapshot-preview {
+  box-sizing: border-box;
+  padding: 10px;
+  background: rgb(181, 226, 252);
+  overflow: hidden;
+}
+
+.snapshot-preview__item {
+  float: left;
+  width: 200px; height: 200px;
+  background: rgb(128, 128, 255);
+  margin: 0px 10px 10px 0px;
+}
+
+.snapshot-preview__image {
+  width: 100%; height: 100%;
+}
