--- a/sass/dashboard/partials/_gutter.scss
+++ b/sass/dashboard/partials/_gutter.scss
@@ -1,5 +1,6 @@
 .gutter {
+  box-sizing: border-box;
   float: left;
-  width: 1vw; height: 100vh;
-  background: rgb(125, 145, 125);
+  width: $gutter-width; height: 100vh;
+  border-right: 1px solid #ccc;
 }
