--- a/sass/dashboard/partials/_content-section.scss
+++ b/sass/dashboard/partials/_content-section.scss
@@ -1,21 +1,20 @@
 .content-section {
   box-sizing: border-box;
   float: left;
-  width: 69vw; height: 100vh;
-  background: rgb(190, 156, 229);
-  padding: 40px;
+  width: $content-section-width; height: 100vh;
+  padding: 100px 0px 150px 0px;
   overflow: scroll;
 }
 
 .form {
   box-sizing: border-box;
-  background: rgb(221, 250, 198);
-  padding: 30px;
+  position: relative;
+  width: 927px;
+  margin: auto;
 }
 
 .form__member {
-  background: rgb(247, 220, 133);
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   overflow: hidden;
 
   &:nth-last-child() {
@@ -26,7 +25,8 @@
 .form__member-name {
   float: left;
   width: 150px; height: 40px;
-  background: rgb(172, 172, 236);
+  font-weight: 300;
+  font-size: 1.1rem;
 
   &:before {
     content: '';
@@ -37,24 +37,24 @@
 }
 
 .form__input-wrap {
-  box-sizing: border-box;
   float: left;
-  padding: 5px 0px;
-  background: rgb(252, 217, 217);
+  box-sizing: border-box;
 }
 
 .form__input {
   box-sizing: border-box;
-  height: 30px;
+  height: 40px;
 
   &--text {
     display: block;
-    width: 300px;
-    margin-bottom: 5px;
+    width: 350px;
     border: 1px solid #ccc;
+    font-size: 1.1rem;
+    font-weight: 100;
+    padding: 0px 5px;
 
-    &:nth-last-child(1) {
-      margin-bottom: 0px;
+    &:focus {
+      outline: none;
     }
   }
 
@@ -62,6 +62,8 @@
     width: 40px;
     padding: 0px 5px;
     border: 1px solid #ccc;
+    font-size: 1.1rem;
+    font-weight: 100;
   }
 
   &--radio {
@@ -75,99 +77,260 @@
 }
 
 .form__label {
+  &--thumbnail, &--header-image, &--snapshot {
+    position: absolute;
+    top: 0px; left: 0px;
+    width: 100%; height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    opacity: 0;
+    transition: opacity .3s;
+    cursor: pointer;
+
+    // plus symbol
+    &::before, &::after {
+      content: '';
+      position: absolute;
+      top: 50%; left: 50%;
+      display: block;
+      width: 70px; height: 2px;
+      background: #fff;
+      transform: translate3d(-50%, -50%, 0);
+    }
+
+    // plus symbol
+    &::after {
+      width: 2px; height: 70px;
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &:active {
+      background: rgba(0, 0, 0, 0.8);
+    }
+  }
+
   &--radio {
     margin-right: 20px;
     vertical-align: middle;
+    font-weight: 300;
   }
-}
-
-.form__button-wrap {
-  box-sizing: border-box;
-  float: left;
-  width: 40px; height: 40px;
-  padding: 8px;
 }
 
 .form__button {
   &--add {
-    width: 24px; height: 24px;
+    box-sizing: border-box;
+    float: left;
+    width: 20px; height: 20px;
     border-radius: 50%;
-    background: rgb(102, 85, 255);
-    cursor: default;
+    margin: 10px;
+    font-size: 20px;
+    color: #777;
 
     &:hover {
-      background: rgb(48, 32, 194);
+      color: #000;
+    }
+  }
+
+  &--submit {
+    display: block;
+    box-sizing: border-box;
+    width: 140px; height: 50px;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 30px;
+    transition: box-shadow .2s;
+    text-align: center;
+    font-weight: 300;
+    font-size: 1.3rem;
+    margin: auto;
+    cursor: pointer;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      height: 100%;
+      vertical-align: middle;
+    }
+
+    &:hover {
+      box-shadow: 2px 2px 5px #ccc;
+    }
+    
+    &:active {
+      transform: scale(0.97);
+      outline: none;
     }
   }
 }
 
 .added-input {
   position: relative;
+  margin-top: 5px;
 }
 
 .added-input__button {
+  box-sizing: border-box;
   position: absolute;
-  right: 0px; top: 0px;
-  border: 0px;
-  width: 30px; height: 30px;
-  background: rgba(255, 142, 142, 0.507);
+  left: 100%; top: 0px;
+  width: 20px; height: 20px;
+  border-radius: 50%;
+  margin: 10px;
+  border: 0px; padding: 0px;
   outline: none;
+  font-size: 20px;
+  color: #777;
 
   &:hover {
-    background: rgba(223, 53, 53, 0.473);
+    color: #000;
+  }
+}
+
+.thumbnail-preview-wrap {
+  box-sizing: border-box;
+  float: left;
+  position: relative;
+  width: 270px; height: 270px;
+  margin: 0px 30px 0px 0px;
+  border: 1px solid #ccc;
+  padding: 5px;
+
+  // "thumbnail" text
+  &::before {
+    content: 'Thumbnail';
+    position: absolute;
+    top: 50%; left: 50%;
+    font-weight: 100;
+    font-size: 2rem;
+    transform: translate3d(-50%, -50%, 0);
+    z-index: -1;
   }
 }
 
 .thumbnail-preview {
   box-sizing: border-box;
-  padding: 10px;
-  background: rgb(181, 226, 252);
-  overflow: hidden;
+  width: 100%; height: 100%;
 }
 
 .thumbnail-preview__item {
   float: left;
-  width: 200px; height: 200px;
-  background: rgb(128, 128, 255);
-  margin: 0px 10px 10px 0px;
+  width: 100%; height: 100%;
 }
 
 .thumbnail-preview__image {
   width: 100%; height: 100%;
 }
 
+input#thumbnail {
+  position: absolute !important;
+  top: 50%; left: 50%;
+  height: 1px; width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
+.header-image-preview-wrap {
+  position: relative;
+  height: 250px;
+  margin: 100px 0px 15px 0px;
+  border: 1px solid #ccc;
+  padding: 5px;
+
+  // "Header Image" text
+  &::before {
+    content: 'Header Image';
+    position: absolute;
+    top: 50%; left: 50%;
+    font-weight: 100;
+    font-size: 2.5rem;
+    transform: translate3d(-50%, -50%, 0);
+    z-index: -1;
+  }
+}
+
 .header-image-preview {
   box-sizing: border-box;
-  padding: 10px;
-  background: rgb(181, 226, 252);
-  overflow: hidden;
+  width: 100%; height: 100%;
 }
 
 .header-image-preview__item {
-  float: left;
-  width: 200px; height: 200px;
-  background: rgb(128, 128, 255);
-  margin: 0px 10px 10px 0px;
+  position: relative;
+  width: 100%; height: 100%;
+  overflow: hidden;
 }
 
 .header-image-preview__image {
-  width: 100%; height: 100%;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  transform: translate3d(0, -50%, 0);
+}
+
+input#header-image {
+  position: absolute !important;
+  top: 50%; left: 50%;
+  height: 1px; width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
+.snapshot-preview-wrap {
+  box-sizing: border-box;
+  position: relative;
+  min-height: 485px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  overflow: hidden;
+  margin: 15px 0px 50px 0px;
+
+  // "Snapshot" box
+  &::before {
+    content: 'Snapshot';
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    top: 5px; left: 5px;
+    width: 225px; height: 225px;
+    line-height: 225px;
+    border: 1px solid #ccc;
+    text-align: center;
+    font-weight: 100;
+    font-size: 2rem;
+    z-index: -1;
+  }
 }
 
 .snapshot-preview {
   box-sizing: border-box;
-  padding: 10px;
-  background: rgb(181, 226, 252);
-  overflow: hidden;
+  width: 100%; height: 100%;
 }
 
 .snapshot-preview__item {
+  box-sizing: border-box;
   float: left;
-  width: 200px; height: 200px;
-  background: rgb(128, 128, 255);
-  margin: 0px 10px 10px 0px;
+  width: 225px; height: 225px;
+  margin: 25px 5px 0px 0px;
+  padding: 5px;
+  border: 1px solid #ccc;
+
+  &:nth-child(-n+4) {
+    margin-top: 0px;
+  }
+
+  &:nth-child(4n) {
+    margin-right: 0px;
+  }
 }
 
 .snapshot-preview__image {
   width: 100%; height: 100%;
+}
+
+input#snapshot {
+  position: absolute !important;
+  top: 50%; left: 50%;
+  height: 1px; width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
 }
