feat: link project create button to create form

--- a/public/stylesheets/dashboard/main.css
+++ b/public/stylesheets/dashboard/main.css
@@ -101,6 +101,8 @@ table {
   position: relative;
   width: 927px;
   margin: auto; }
+  .form--hide {
+    display: none; }
 
 .form__member {
   margin-bottom: 8px;
