--- a/public/stylesheets/dashboard/main.css
+++ b/public/stylesheets/dashboard/main.css
@@ -38,8 +38,22 @@ table {
   float: left;
   width: 350px;
   height: 100vh;
-  padding: 50px 30px;
+  padding: 20px 30px 50px 30px;
   overflow: scroll; }
+
+.index-section__auth {
+  font-size: 0.9em;
+  font-weight: 300;
+  text-align: right;
+  margin-bottom: 30px;
+  margin-right: -25px; }
+
+.index-section__nickname {
+  margin-right: 7px; }
+
+.index-section__logout {
+  color: #000;
+  margin-left: 7px; }
 
 .index-section__create-button {
   box-sizing: border-box;
