style: project title position is changed to left

--- a/public/stylesheets/project/main.css
+++ b/public/stylesheets/project/main.css
@@ -57,11 +57,10 @@ header {
 .header__title {
   position: absolute;
   top: 13%;
-  left: 10%;
+  left: 5%;
   font-size: 2.3vw;
   font-weight: 500;
-  color: #fff;
-  transform: translate3d(-50%, 0, 0); }
+  color: #fff; }
 
 .navigation {
   position: relative;
