--- a/public/stylesheets/home/main.css
+++ b/public/stylesheets/home/main.css
@@ -229,8 +229,8 @@ footer {
 .project {
   display: block;
   float: left;
-  width: 25vw;
-  height: 25vw;
+  width: 16.6vw;
+  height: 41.5vw;
   position: relative;
   overflow: hidden;
   cursor: pointer;
@@ -243,8 +243,6 @@ footer {
     .project {
       width: 50vw;
       height: 50vw; } }
-  .project:hover .project__image {
-    transform: scale(1.05); }
   .project:hover .project__header {
     opacity: 1; }
   .project:hover .project__title {
@@ -258,9 +256,10 @@ footer {
   opacity: 0; }
 
 .project__image {
-  width: 100%;
+  position: absolute;
   height: 100%;
-  transition: transform .5s; }
+  left: 50%;
+  transform: translate3d(-50%, 0, 0); }
 
 .project__header {
   box-sizing: border-box;
