--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -18,6 +18,7 @@ html(lang="ko")
     div.gutter
     div.content-section
       form.form.form--hide(action="/project" method="post" enctype="multipart/form-data")
+        button.form__close-button close
         div.thumbnail-preview-wrap
           div.thumbnail-preview
           label.form__label.form__label--thumbnail(for="thumbnail")
