--- a/sass/dashboard/partials/_content-section.scss
+++ b/sass/dashboard/partials/_content-section.scss
@@ -17,6 +17,11 @@
   }
 }
 
+.form__close-button {
+  position: absolute;
+  top: -50px; right: 50px;
+}
+
 .form__member {
   margin-bottom: 8px;
   overflow: hidden;
