--- a/sass/dashboard/partials/_content-section.scss
+++ b/sass/dashboard/partials/_content-section.scss
@@ -80,8 +80,16 @@
     vertical-align: middle;
   }
 
-  &--file {
-    
+  &--video-url {
+    width: 350px;
+    border: 1px solid #ccc;
+    font-size: 1.1rem;
+    font-weight: 100;
+    padding: 0px 5px;
+
+    &:focus {
+      outline: none;
+    }
   }
 }
 
@@ -175,14 +183,11 @@
 }
 
 .added-input {
-  position: relative;
   margin-top: 5px;
 }
 
 .added-input__button {
   box-sizing: border-box;
-  position: absolute;
-  left: 100%; top: 0px;
   width: 20px; height: 20px;
   border-radius: 50%;
   margin: 10px;
