--- a/public/stylesheets/dashboard/main.css
+++ b/public/stylesheets/dashboard/main.css
@@ -354,26 +354,9 @@ input#header-image {
   border: 1px solid #ccc;
   overflow: hidden;
   margin: 15px 0px 50px 0px; }
-  .snapshot-preview-wrap::before {
-    content: 'Snapshot';
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    width: 225px;
-    height: 225px;
-    line-height: 225px;
-    border: 1px solid #ccc;
-    text-align: center;
-    font-weight: 100;
-    font-size: 2rem;
-    z-index: -1; }
 
 .snapshot-preview {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%; }
+  box-sizing: border-box; }
 
 .snapshot-preview__item {
   box-sizing: border-box;
@@ -392,8 +375,8 @@ input#header-image {
   width: 100%;
   height: 100%; }
 
-input#snapshot {
-  position: absolute !important;
+.snapshot__input {
+  position: absolute;
   top: 50%;
   left: 50%;
   height: 1px;
