--- a/sass/dashboard/partials/_content-section.scss
+++ b/sass/dashboard/partials/_content-section.scss
@@ -298,26 +298,25 @@ input#header-image {
   overflow: hidden;
   margin: 15px 0px 50px 0px;
 
-  // "Snapshot" box
-  &::before {
-    content: 'Snapshot';
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    top: 5px; left: 5px;
-    width: 225px; height: 225px;
-    line-height: 225px;
-    border: 1px solid #ccc;
-    text-align: center;
-    font-weight: 100;
-    font-size: 2rem;
-    z-index: -1;
-  }
+  // // "Snapshot" box
+  // &::before {
+  //   content: 'Snapshot';
+  //   box-sizing: border-box;
+  //   display: block;
+  //   position: absolute;
+  //   top: 5px; left: 5px;
+  //   width: 225px; height: 225px;
+  //   line-height: 225px;
+  //   border: 1px solid #ccc;
+  //   text-align: center;
+  //   font-weight: 100;
+  //   font-size: 2rem;
+  //   z-index: -1;
+  // }
 }
 
 .snapshot-preview {
   box-sizing: border-box;
-  width: 100%; height: 100%;
 }
 
 .snapshot-preview__item {
@@ -341,8 +340,12 @@ input#header-image {
   width: 100%; height: 100%;
 }
 
-input#snapshot {
-  position: absolute !important;
+.snapshot-preview__add-button {
+  
+}
+
+.snapshot__input {
+  position: absolute;
   top: 50%; left: 50%;
   height: 1px; width: 1px;
   overflow: hidden;
