--- a/sass/dashboard/partials/_content-section.scss
+++ b/sass/dashboard/partials/_content-section.scss
@@ -320,6 +320,7 @@ input#header-image {
 }
 
 .snapshot-preview__item {
+  position: relative;
   box-sizing: border-box;
   float: left;
   width: 225px; height: 225px;
@@ -334,6 +335,10 @@ input#header-image {
   &:nth-child(4n) {
     margin-right: 0px;
   }
+
+  &:hover .snapshot-preview__remove-button {
+    visibility: visible;
+  }
 }
 
 .snapshot-preview__image {
@@ -342,6 +347,12 @@ input#header-image {
 
 .snapshot-preview__add-button {
   
+}
+
+.snapshot-preview__remove-button {
+  visibility: hidden;
+  position: absolute;
+  top: 0px; right: 0px;
 }
 
 .snapshot__input {
