feat: add feature to change snapshot

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -116,5 +116,9 @@ html(lang="ko")
             type="file"
             accept="image/*"
           )
+          input.snapshot__input.snapshot__input--update(
+            type="file"
+            accept="image/*"
+          )
         button.form__button.form__button--submit(type="submit") 제출
     script(src="/javascripts/dashboard/bundle.js")
