refactor: apply MVC to check category

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -68,7 +68,7 @@ html(lang="ko")
             )
         div.form__member
           span.form__member-name Catogory
-          div.form__input-wrap
+          div.form__input-wrap.form__input-wrap--category
             input.form__input.form__input--radio(
               type="radio"
               id="work"
